RESOLVED FIXED 121286
[CTTE] RenderTableCol is never anonymous.
https://bugs.webkit.org/show_bug.cgi?id=121286
Summary [CTTE] RenderTableCol is never anonymous.
Andreas Kling
Reported 2013-09-13 03:28:24 PDT
[CTTE] RenderTableCol is never anonymous.
Attachments
Patch (5.60 KB, patch)
2013-09-13 03:28 PDT, Andreas Kling
koivisto: review+
Patch (3.66 KB, patch)
2013-09-13 03:56 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-09-13 03:28:42 PDT
Antti Koivisto
Comment 2 2013-09-13 03:55:18 PDT
Comment on attachment 211529 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=211529&action=review > Source/WebCore/rendering/RenderListItem.cpp:104 > - Element* listItemNode = listItem->element(); > + Element& listItemNode = listItem->existingElement(); Could name local to *Element since you are here.
Andreas Kling
Comment 3 2013-09-13 03:56:53 PDT
Andreas Kling
Comment 4 2013-09-13 04:15:33 PDT
Comment on attachment 211532 [details] Patch Clearing flags on attachment: 211532 Committed r155685: <http://trac.webkit.org/changeset/155685>
Andreas Kling
Comment 5 2013-09-13 04:15:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.