[CTTE] RenderTableCol is never anonymous. <https://webkit.org/b/121286>

Reviewed by Antti Koivisto.

Hide element() and provide existingElement() instead, returning an Element&.
Removed one bogus null check that was exposed.

Canonical link: https://commits.webkit.org/139242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155685 268f45cc-cd09-0410-ab3c-d52691b4dbfc